Dilate Erode Feather Bug - feathering wraps around image #35400

Closed
opened 2013-05-17 07:25:06 +02:00 by Carlo Andreacchio · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64, r56693 GTX 580

- Blender version with error, and version that worked ---

r56693 has bug
r52422 has bug
r51291 doesnt have bug

- Short description of error ---

Feathering a dilate erode node over an edge wraps it around the corner

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Step 1: open attached blend file
Step 2: change frame to update viewer node
Step 3: view original mask
Step 4: notice that the dilate erode node wraps around to the other side of the image.

%%%

%%%--- Operating System, Graphics card --- Windows 7 x64, r56693 GTX 580 - Blender version with error, and version that worked --- r56693 has bug r52422 has bug r51291 doesnt have bug - Short description of error --- Feathering a dilate erode node over an edge wraps it around the corner - Steps for others to reproduce the error (preferably based on attached .blend file) --- Step 1: open attached blend file Step 2: change frame to update viewer node Step 3: view original mask Step 4: notice that the dilate erode node wraps around to the other side of the image. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Should be fixed in rev. 57297.%%%

%%%Should be fixed in rev. 57297.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35400
No description provided.