Fix for bug [#35400] Dilate Erode Feather Bug - feathering wraps around image