source/blender/compositor/operations/COM_GaussianYBlurOperation.cpp
@@ -85,11 +85,9 @@ void GaussianYBlurOperation::executePixel(float output[4], int x, int y, void *d
 	int miny = y - this->m_rad;
 	int maxy = y + this->m_rad;
 	int minx = x;
-	// int maxx = x;  // UNUSED
 	miny = max(miny, inputBuffer->getRect()->ymin);
 	minx = max(minx, inputBuffer->getRect()->xmin);
 	maxy = min(maxy, inputBuffer->getRect()->ymax - 1);
-	// maxx = min(maxx, inputBuffer->getRect()->xmax);
 
 	int index;
 	int step = getStep();
